Configuring the database

--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -4,11 +4,13 @@ type: php:7.4
 
 runtime:
     extensions:
+        - pdo_pgsql
         - apcu
         - mbstring
         - sodium
         - ctype
         - iconv
+        
         
 
 #variables:
@@ -20,6 +22,9 @@ build:
     flavor: none
 
 disk: 512
+
+relationships:
+    database: "db:postgresql"
 
 web:
     locations:
